--- a/TuyenDung/style.css
+++ b/TuyenDung/style.css
@@ -31,6 +31,10 @@
 /*----------------------------------------*/
 /*  1.  Job Post Style
 /*----------------------------------------*/
+.post-editor {
+ 
+}
+
 .single-job-post {
     border-left: 1px solid #e3e3e3;
     border-right: 1px solid #e3e3e3;
