--- a/TuyenDung/css/shortcode/default.css
+++ b/TuyenDung/css/shortcode/default.css
@@ -35,57 +35,33 @@ Please do not change anything here! write in a custom.css file if required!
     01. General
 *************************/
 @font-face {
-    font-family: 'montserratbold';
+    font-family: 'Roboto', sans-serif;
     src: url('../../fonts/montserrat-bold-webfont.eot');
-    src: url('../../fonts/montserrat-bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../../fonts/montserrat-bold-webfont.woff2') format('woff2'),
-         url('../../fonts/montserrat-bold-webfont.woff') format('woff'),
-         url('../../fonts/montserrat-bold-webfont.ttf') format('truetype'),
-         url('../../fonts/montserrat-bold-webfont.svg#montserratbold') format('svg');
+    src: url('../../fonts/montserrat-bold-webfont.eot?#iefix') format('embedded-opentype'), url('../../fonts/montserrat-bold-webfont.woff2') format('woff2'), url('../../fonts/montserrat-bold-webfont.woff') format('woff'), url('../../fonts/montserrat-bold-webfont.ttf') format('truetype'), url('../../fonts/montserrat-bold-webfont.svg#montserratbold') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
-    font-family: 'montserratlight';
+    font-family: 'Roboto', sans-serif;
     src: url('../../fonts/montserrat-light-webfont.eot');
-    src: url('../../fonts/montserrat-light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../../fonts/montserrat-light-webfont.woff2') format('woff2'),
-         url('../../fonts/montserrat-light-webfont.woff') format('woff'),
-         url('../../fonts/montserrat-light-webfont.ttf') format('truetype'),
-         url('../../fonts/montserrat-light-webfont.svg#montserratlight') format('svg');
+    src: url('../../fonts/montserrat-light-webfont.eot?#iefix') format('embedded-opentype'), url('../../fonts/montserrat-light-webfont.woff2') format('woff2'), url('../../fonts/montserrat-light-webfont.woff') format('woff'), url('../../fonts/montserrat-light-webfont.ttf') format('truetype'), url('../../fonts/montserrat-light-webfont.svg#montserratlight') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
-    font-family: 'montserratregular';
-    src: url('../../fonts/montserrat-regular-webfont.eot');
-    src: url('../../fonts/montserrat-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../../fonts/montserrat-regular-webfont.woff2') format('woff2'),
-         url('../../fonts/montserrat-regular-webfont.woff') format('woff'),
-         url('../../fonts/montserrat-regular-webfont.ttf') format('truetype'),
-         url('../../fonts/montserrat-regular-webfont.svg#montserratregular') format('svg');
+    font-family: 'Roboto', sans-serif;
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
-    font-family: 'montserratsemi_bold';
-    src: url('../../fonts/montserrat-semibold-webfont.eot');
-    src: url('../../fonts/montserrat-semibold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../../fonts/montserrat-semibold-webfont.woff2') format('woff2'),
-         url('../../fonts/montserrat-semibold-webfont.woff') format('woff'),
-         url('../../fonts/montserrat-semibold-webfont.ttf') format('truetype'),
-         url('../../fonts/montserrat-semibold-webfont.svg#montserratsemi_bold') format('svg');
+    font-family: 'Roboto', sans-serif;
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
-    font-family: 'montserratextrabold';
+    font-family: 'Roboto', sans-serif;
     src: url('../../fonts/montserrat-extrabold-webfont.eot');
-    src: url('../../fonts/montserrat-extrabold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../../fonts/montserrat-extrabold-webfont.woff2') format('woff2'),
-         url('../../fonts/montserrat-extrabold-webfont.woff') format('woff'),
-         url('../../fonts/montserrat-extrabold-webfont.ttf') format('truetype'),
-         url('../../fonts/montserrat-extrabold-webfont.svg#montserratextrabold') format('svg');
+    src: url('../../fonts/montserrat-extrabold-webfont.eot?#iefix') format('embedded-opentype'), url('../../fonts/montserrat-extrabold-webfont.woff2') format('woff2'), url('../../fonts/montserrat-extrabold-webfont.woff') format('woff'), url('../../fonts/montserrat-extrabold-webfont.ttf') format('truetype'), url('../../fonts/montserrat-extrabold-webfont.svg#montserratextrabold') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -134,7 +110,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'montserratbold';
+    font-family: 'Roboto', sans-serif;
     margin: 0px;
     color: #6d6d6d
 }
@@ -879,16 +855,16 @@ textarea {
     04. button
 *************************/
 a.button, button {
-	border-radius: 5px;
-	color: #ffffff;
-	display: inline-block;
-	font-family: "montserratregular";
-	font-size: 12px;
-	line-height: 28px;
-	overflow: hidden;
-	padding: 0 23px;
-	position: relative;
-	text-transform: uppercase;
+    border-radius: 5px;
+    color: #ffffff;
+    display: inline-block;
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+    line-height: 28px;
+    overflow: hidden;
+    padding: 0 23px;
+    position: relative;
+    text-transform: uppercase;
 }
 a.button:after {
   background: rgba(0, 0, 0, 0.09) none repeat scroll 0 0;
@@ -1326,12 +1302,12 @@ i.zmdi {font-size: 14px;}
     15. Pagination
 *************************/
 .pagination-content .pagination li a {
-	border: 0 none;
-	color: #383838;
-	font-family: "montserratregular";
-	font-size: 18px;
-	line-height: 20px;
-	padding: 0 9px;
+    border: 0 none;
+    color: #383838;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    line-height: 20px;
+    padding: 0 9px;
 }
 .pagination-content .pagination li a i {font-size: 18px}
 .pagination-content .pagination li a:hover, .pagination-content .pagination li.active a {
